# boston-subway-info-app

./: .gitignore  README.md
boston-subway-info-app-backend/: .env.tmpl  Dockerfile  docker-compose.yml  pyproject.toml
boston-subway-info-app-backend/api/: adapters.py  admin.py  models.py  schemas.py
boston-subway-info-app-backend/api/management/commands/: import_subway_data.py  map_stops_to_routes.py
boston-subway-info-app-backend/api/migrations/: 0001_initial.py  0002_alter_route_name_alter_route_route_id_and_more.py
boston-subway-info-app-backend/api/routers/: __init__.py  routes.py
boston-subway-info-app-backend/core/: asgi.py  settings.py  urls.py
boston-subway-info-app-frontend/: .env.tmpl  package-lock.json  package.json
boston-subway-info-app-frontend/src/: App.tsx
boston-subway-info-app-frontend/src/api/: index.ts
boston-subway-info-app-frontend/src/components/DisplayTable/: DisplayTable.tsx
boston-subway-info-app-frontend/src/components/RoutesAndStopsTables/: RoutesAndStopsTables.tsx  index.tsx
boston-subway-info-app-frontend/src/components/SearchInstructionsCard/: SearchInstructionsCard.tsx  index.tsx
boston-subway-info-app-frontend/src/components/common/: CommonTable.tsx
boston-subway-info-app-frontend/src/utils/: types.ts
