[tool.poetry]
name = "boston-subway-info-app-backend"
version = "0.1.0"
description = ""
authors = ["Cindy Vo <cindyhvo824@gmail.com>"]
readme = "README.md"
packages = [{include = "boston_subway_info_app_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
uvicorn = "^0.20.0"
fastapi = "^0.92.0"
black = "^23.1.0"
pydantic = "^1.10.5"
uvloop = "^0.17.0"
flake8 = "^6.0.0"
ipython = "^8.11.0"
mypy = "^1.0.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
